fix($all): fixed margins on header spacing

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -28,7 +28,7 @@
         h2
         {
             margin-top: 0;
-            margin-bottom: 12px;
+            margin-bottom: 16px;
 
             @include TYPE-HeaderH2;
         }
