--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -17,6 +17,7 @@
     & > h2
     {
         margin-top: 30px;
+        margin-bottom: 16px;
 
         @include TYPE-HeaderH2;
 
